# AI-Magnet-Assistant

./: .gitignore  DEVELOPER_MANUAL.md  LICENSE  Link Optimizer Pro PRD.md  README.md  README.zh-CN.md  Technical_Roadmap.md  bug_report.md  index.html  issue.md  mid_project_report.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  tauri-matrix-build.yml
docs/: ARCHITECTURE.md  CODE_REVIEW_ANALYSIS.md  DEVELOPER_MANUAL.md  I18N_ANALYSIS_REPORT.md  I18N_ARCHITECTURE.md  INTERNATIONALIZATION_IMPLEMENTATION_REPORT.md  RELEASE-1.2.0.md  RELEASES.md
magnetlink-optimizer-pro-core/: Cargo.toml
magnetlink-optimizer-pro-core/src/: filter.rs  main.rs  searcher.rs
magnetlink-optimizer-pro-ui/: package-lock.json  package.json  vite.config.ts
magnetlink-optimizer-pro-ui/src/: App.vue
magnetlink-optimizer-pro-ui/src-tauri/: Cargo.toml  tauri.conf.json
magnetlink-optimizer-pro-ui/src-tauri/src/: app_state.rs  filter.rs  llm_service.rs  main.rs  searcher.rs
magnetlink-optimizer-pro-ui/src/components/: EnginesPage.vue  FavoritesPage.vue  HomePage.vue  PriorityPage.vue  ResultCard.vue  SettingsPage.vue  SideNavigation.vue
magnetlink-optimizer-pro-ui/src/composables/: useStore.ts
run/: package-win.sh  setup.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/en/: messages.json
src-tauri/locales/zh-CN/: messages.json
src-tauri/src/: app_state.rs  filter.rs  i18n.rs  lib.rs  llm_service.rs  main.rs  searcher.rs
src/components/: EnginesPage.vue  FavoritesPage.vue  HomePage.vue  LanguageSwitcher.vue  PriorityPage.vue  ResultCard.vue  SettingsPage.vue  SideNavigation.vue
src/composables/: useConfirmDelete.ts  useI18n.ts
src/i18n/: index.ts  types.ts
src/i18n/locales/en/: common.json  index.ts
src/i18n/locales/en/components/: resultcard.json
src/i18n/locales/en/messages/: errors.json
src/i18n/locales/en/pages/: engines.json  favorites.json  home.json  priority.json  settings.json
src/i18n/locales/zh-CN/: common.json  index.ts
src/i18n/locales/zh-CN/components/: resultcard.json
src/i18n/locales/zh-CN/messages/: errors.json
src/i18n/locales/zh-CN/pages/: engines.json  favorites.json  home.json  priority.json  settings.json
