[package]
name = "magnetlink-optimizer-pro-core"
version = "0.1.0"
edition = "2021"
description = "Core library for MagnetLink Optimizer Pro - Intelligent Magnet Link Search and Optimization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
[dev-dependencies]
httpmock = "0.7"