[package]
name = "ai-magnet-assistant"
version = "0.1.0"
description = "AI Magnet Assistant - Intelligent Magnet Link Search and Optimization Tool"
authors = ["AI Magnet Assistant Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_magnet_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "brotli"] }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
urlencoding = "2.1"
url = "2.5"

[dev-dependencies]
httpmock = "0.7"

